Changelog
=========

1.47-dev - (unreleased)
-----------------------

1.46 - (2011-08-02)
-------------------
 * Bug fix: fixed a problem with boolean widgets being toggled in aggedit [tiberich #4450]

1.45 - (2011-08-02)
-------------------
 * Bug fix: fix a unicode bug in specification/@@rdf view [tiberich #4448]

1.44 - (2011-07-19)
-------------------
 * Change: use 'replace' option when converting to unicode for previous commit [tiberich #4426]

1.43 - (2011-07-18)
-------------------
 * Bug fix: fix a unicode problem in specification/@@rdf view [tiberich 4426]

1.42 - (2011-06-16)
-------------------
 * Bug fix: conflicting ids. link "more information" in toc was using same id as methodology section. [demarant]

1.41 - (2011-05-20)
-------------------
 * Bug fix: references now also appear on Assessment view [ghicaale #4351]

1.40 - (2011-03-29)
-------------------
 * Change: cleaned package of pylint violations [ichimdav #4140]
 * Change: use portal_type when looking for files in assessment [tiberich #4135]
 * Bug fix: force decoding into unicode of Description for content types with autocomputed descriptions [tiberich]
 * Bug fix: added IValueProvider adapter for ManagementPlanField [tiberich #4222]

1.39 - (2011-03-08)
-------------------
 * Bug fix: commented under IndicatorFactSheet content type the usage of
     "unique_specification_code" validator as it is not defined [ghicaale #4174]

1.38 - (2011-02-24)
-------------------
 * Bug fix: decode to unicode the Description for content types with autocomputed value [tiberich #4164]

1.37 - (2011-02-10)
-------------------
 * Bug fix: made IndicatorFactSheets use the same IArchetype2Surf adapter as Specifications [tiberich #3982]

1.36 - (2011-02-04)
-------------------
 * Change: Minor changes to the overviews links in portlet refs #4045 [demarant]

1.35 - (2011-02-02)
-------------------